# Contextual

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  README.md  dev_server.py  main.py  package.json  pyproject.toml  requirements.txt  test_api.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
app/: chunker.py  compressor.py  config.py  debug.py  embedder.py  hybrid_search.py  indexer.py  llm.py  loader.py  multi_query.py  qa.py  query_expander.py  retriever.py  server.py  upload_handler.py
app/repo_map/: relationships.py
debug_logs/: 20251230_220252_retrieved_chunks.json  20251230_222407_retrieved_chunks.json  20251230_222429_retrieved_chunks.json  20251230_225429_retrieved_chunks.json  20251231_002947_retrieved_chunks.json  20251231_004712_retrieved_chunks.json  20251231_004813_retrieved_chunks.json  20251231_004838_retrieved_chunks.json  20251231_004925_retrieved_chunks.json  20251231_012008_retrieved_chunks.json  20251231_012226_retrieved_chunks.json  20251231_015900_retrieved_chunks.json  20251231_015924_retrieved_chunks.json  20251231_020109_retrieved_chunks.json  20260121_024708_retrieved_chunks.json  20260121_025715_retrieved_chunks.json  20260121_025746_retrieved_chunks.json  20260121_030602_retrieved_chunks.json  20260121_032747_retrieved_chunks.json  20260121_032950_retrieved_chunks.json  20260121_033115_retrieved_chunks.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PUBLISHING.md  ROADMAP.md
docs/archive/: EXTENSION_PLAN.prompt.md  PLAN_Fixes.md  claude_opus_creative_prompt.md  plans for next day.md  test_models.py
evaluation/: README.md  __init__.py  evaluate.py  metrics.py  test_set.json
extension/: .vscodeignore  CHANGELOG.md  README.md  esbuild.js  package-lock.json  package.json  repo-aware-ai-0.1.0.vsix  tsconfig.json
extension/src/: constants.ts  extension.ts
extension/src/commands/: askQuestion.ts  explainRepo.ts  explainSelection.ts  findRelated.ts  rebuildIndex.ts
extension/src/providers/: codeLensProvider.ts  hoverProvider.ts
extension/src/services/: backendBootstrap.ts  backendClient.ts  backendProcess.ts  cacheManager.ts  indexManager.ts
extension/src/views/: chatPanel.ts  repoMapPanel.ts  statusBar.ts
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/chat/: ChatView.tsx  QueryInput.tsx  ResponseCard.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/repomap/: ProcessFlow.tsx  RepoMapView.tsx
frontend/src/components/sidebar/: ActivityFeed.tsx
frontend/src/components/three/: Scene.tsx
frontend/src/components/ui/: BootSequence.tsx  ErrorBoundary.tsx
frontend/src/components/upload/: DropZone.tsx  UploadProgress.tsx
frontend/src/store/: useStore.ts
repo_aware_ai/: _retry.py  ast_chunker.py  chunker.py  compressor.py  config.py  conversation.py  debug.py  embedder.py  hybrid_search.py  indexer.py  llm.py  loader.py  multi_query.py  progress_tracker.py  qa.py  query_expander.py  reranker.py  retriever.py  server.py  upload_handler.py
repo_aware_ai/repo_map/: __init__.py  cache.py  communities.py  graph.py  parsing.py  processes.py  relationships.py  types.py
tests/: conftest.py  test_chunker.py  test_conversation.py  test_index_retrieve.py  test_loader.py
